[package]
name = "cachy-chroot"
version = "1.0.0"
authors = ["SoulHarsh007 <harsh.peshwani@outlook.com>"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
dialoguer = "0.11"
log = { version = "0.4", default-features = false }
nix = { version = "0.29", features = ["user"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.2"
tempfile = "3.10"
which = "6"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
