[package]
name = "cachy-chroot"
version = "1.2.0"
authors = ["SoulHarsh007 <harsh.peshwani@outlook.com>"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["std", "derive"] } # we want all goodies
colored = "2"
dialoguer = { version = "0.11", default-features = false }
fstab = "0.4"
log = { version = "0.4", default-features = false }
nix = { version = "0.29", features = ["user"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
subprocess = "0.2"
tempfile = "3.10"
which = "6"

[build-dependencies]
clap = { version = "4", features = ["derive"] } # we want all goodies
clap_complete = "4"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
