[package]
name = "cachy-chroot"
version = "1.2.1"
authors = ["SoulHarsh007 <harsh.peshwani@outlook.com>"]
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
bitflags = "2.10"
clap = { version = "4", features = ["std", "derive"] }
colored = "3"
dialoguer = { version = "0.12", default-features = false }
fstab = "0.4"
log = { version = "0.4", default-features = false }
nix = { version = "0.30", features = ["user"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
subprocess = "0.2"
tempfile = "3"
which = "8"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
